# finadvisor

./: .gitignore  Makefile  README.md  main.py
.github/workflows/: tests.yml
backend/: .env.example  README.md  pyproject.toml
backend/api/: main.py
backend/app/: main.py
backend/src/backend/app/: main.py
backend/src/backend/app/routes/: ai.py  stocks.py
backend/src/backend/app/schemas/: ai.py  stock.py
backend/src/backend/app/services/: crewai_service.py  finnhub_service.py  yahoo_finance.py
backend/src/backend/config/: settings.py
backend/tests/: test_finnhub_service.py  test_main.py  test_yahoo_finance.py
db/: .coverage  docker-compose.yaml  main.py  pyproject.toml
frontend/: pyproject.toml  streamlit_app.py
rag/: pyproject.toml
rag/rag/: pipeline.py
rag/tests/: test_rag_pipeline.py
shared/: logger.py  pyproject.toml
shared/shared/: logging_utils.py
shared/tests/: test_logger.py
